--- a/package.json
+++ b/package.json
@@ -3,5 +3,23 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.13.0",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.3",
+    "@types/redis": "^4.0.10",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
+    "prisma": "^6.13.0",
+    "redis": "^5.7.0",
+    "typescript": "^5.9.2",
+    "zod": "^4.0.14"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.17"
   }
 }
