--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "node-starter",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./dist/index.js",
+    "build": "npx tsc -b"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/redis": "^4.0.10",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
