--- a/package.json
+++ b/package.json
@@ -4,25 +4,33 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./dist/index.js",
-    "build": "npx tsc -b"
+    "build": "npx tsc -b",
+    "dev": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@supabase/supabase-js": "^2.53.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/redis": "^4.0.10",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
+    "pdf-parse": "^1.1.1",
     "prisma": "^6.13.0",
     "redis": "^5.7.0",
     "typescript": "^5.9.2",
     "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.17"
+    "@types/node": "^24.1.0",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pdf-parse": "^1.1.5",
+    "ts-node-dev": "^2.0.0"
   }
 }
