--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
     "target": "esnext",
-    "types": [],
+    "types": ["node"], // for nodeJs core modules like path fs
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
