--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
+    "@google/genai": "^1.12.0",
     "@prisma/client": "^6.13.0",
     "@supabase/supabase-js": "^2.53.0",
     "@types/dotenv": "^6.1.1",
