--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/redis": "^4.0.10",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
@@ -29,6 +30,7 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.17",
     "@types/pdf-parse": "^1.1.5",
